Fix text formatting on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -340,13 +340,13 @@ a.ranking, a.ranking:hover, a.ranking:visited, a.ranking:active {
 
 /* Mobile */
 
-/* @media (max-width: 600px) {
+@media (max-width: 600px) {
   .container {
     gap: 16px;
   }
 
   body {
-    font-size: 0.75rem;
+    font-size: 1rem;
   }
 
   h1 {
@@ -356,11 +356,16 @@ a.ranking, a.ranking:hover, a.ranking:visited, a.ranking:active {
   nav a,
   label,
   .muted {
-    font-size: 0.75rem;
+    font-size: 1rem;
   }
 
   a.ranking {
     font-size: 1rem;
   }
-} */
+
+  ul, ol {
+    padding-left: 16px;
+  }
+
+}
 
